# AgentZola

./: .cursorignore  .gitignore  .gitmodules  DEBUG_INCONSISTENT_SAMPLES.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  __init__.py
WhiteFox/: FIXES_APPLIED.md  LOGGING_CHANGES.md  PRE_PUSH_CHECKLIST.md  README.md  READY_CHECKLIST.md  __init__.py  consolidate_logs.py  diagnose_optimizations.py  pyproject-20230507.toml  pyproject.toml  run_sanity_check.py  test_state_init.py
WhiteFox/domain/: __init__.py  bandit.py  generation.py  harness.py
WhiteFox/generation/: __init__.py  api_validator.py  bandit.py  code_cleaner.py  code_processor.py  code_refiner.py  generator.py  harness.py  log_parser.py  logger.py  main.py  oracle.py  prompts.py  sanity_checker.py  spec.py
WhiteFox/generation/code_processing/: __init__.py  base.py  pytorch.py  tensorflow.py  tflite.py
WhiteFox/generation/harness/: __init__.py  base.py  inductor.py  tflite.py  xla.py
WhiteFox/generation/logging/: __init__.py  log_parser.py  logger.py  profiler.py  sanity_checker.py
WhiteFox/generation/wf_logging/: __init__.py  coverage.py  logger.py  profiler.py  quality.py
WhiteFox/logging/: README.md
WhiteFox/models/: __init__.py  generation.py
WhiteFox/requirement/: .gitignore  __init__.py  main.py  prompt_exec.py  prompt_gen.py
WhiteFox/requirement/base/: __init__.py  base.py  gpt.py
WhiteFox/requirement/suts/: __init__.py  inductor.py  tflite.py  xla.py
WhiteFox/slurm/: container_launch.sh  cpu_whitefox_slurm.sh  fetch_llvm17.sh  final_aggregate.sh  pytorchinductor_slurm.sh  tflite_slurm.sh  tfxla_a100_array.sh  tfxla_a100_patch.sh  tfxla_a100_patch2.sh  tfxla_array.sh  tfxla_merge_coverage.sh  tfxla_slurm.sh  whitefox_batch_runner.sh  whitefox_slurm.sh  whitefox_slurm_batch.sh
WhiteFox/slurm/output_tf/: whitefox_212005.out  whitefox_212007.out  whitefox_212009.out  whitefox_212010.out  whitefox_212025.out  whitefox_212029.out  whitefox_212046.out  whitefox_212205.out  whitefox_212210.out  whitefox_212368.out  whitefox_212369.out  whitefox_212370.out  whitefox_212371.out  whitefox_212372.out  whitefox_212373.out  whitefox_212374.out  whitefox_212375.out  whitefox_212378.out  whitefox_212530.out  whitefox_212707.out  whitefox_212711.out  whitefox_212718.out  whitefox_212763.out
WhiteFox/slurm/tfxla/: README.md  (+9 more)
WhiteFox/xilo_inductor/: __init__.py
(+293 files in other folders)
